--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>Willkommen in unserer Arztpraxis</h1>
   <p>Unsere Leistungen, Sprechzeiten und Kontaktdaten finden Sie hier.</p>
+  <p>Wir danken Ihnen, dass Sie unsere Website besuchen!</p>
 </body>
 </html>
